Z-index fixes

--- a/src/assets/scss/components/_columns.scss
+++ b/src/assets/scss/components/_columns.scss
@@ -32,6 +32,6 @@
         height: 100%;
         width: 100%;
         background-color: $orange;
-        z-index: 9999;
+        z-index: 7;
     }
 }
