--- a/src/assets/scss/components/_intro-page.scss
+++ b/src/assets/scss/components/_intro-page.scss
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: center;
     background-color: $orange;
-    z-index: 999999999;
+    z-index: 10;
 
     &__container {
         max-width: 600px;
