--- a/src/assets/scss/components/_intro.scss
+++ b/src/assets/scss/components/_intro.scss
@@ -16,7 +16,7 @@
         height: 100%;
         width: 100%;
         background-color: $orange;
-        z-index: 99999;
+        z-index: 7;
     };
 
     &__container {
