--- a/src/assets/scss/components/_panel.scss
+++ b/src/assets/scss/components/_panel.scss
@@ -9,7 +9,7 @@
     background-color: $orange;
     align-items: center;
     justify-content: center;
-    z-index: 9999;
+    z-index: 8;
 
     &__content {
         position: relative;
