--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -22,6 +22,6 @@
     padding: 15px 15px 10px;
     color: $white;
     cursor: pointer;
-    z-index: 99999;
+    z-index: 9;
   }
 }
